--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "schema-dts": "1.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
